<resources>
    <string name="app_name">CryptAPic</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="take_picture">Take Picture</string>
    <string name="share_secure">Share Securely</string>
    <string name="search">Search</string>
</resources>
